# kdlite

./: Cargo.toml  LICENSE-MIT  README.md  gen-tests.rs  rustfmt.toml
.github/workflows/: rust.yml
examples/: .gitignore  benchmark.rs
src/: dom.rs  lib.rs  number.rs  stream.rs  tests.rs
