[package]
name = "kdlite"
version = "0.1.0"
edition = "2021"
authors = ["1e1001", "Dorian Niemiec <dorian.niemiec@ferron.sh>"]
description = "Small streaming KDL parser (based on just-kdl)"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["document", "kdl", "serialization"]
categories = ["parser-implementations", "config", "encoding"]
documentation = "https://docs.rs/kdlite"
homepage = "https://github.com/ferronweb/kdlite"
repository = "https://github.com/ferronweb/kdlite"

[dev-dependencies]
# for testing compliance & performance
kdl = "6.3.4"

# Git hook
shiba = "0.1.1"
